Half Assignment Finished

--- a/public/index.html
+++ b/public/index.html
@@ -32,13 +32,20 @@
     <!-- FontAwesome Kit Link  -->
     <script src="https://kit.fontawesome.com/f499b60f30.js" crossorigin="anonymous"></script>
 
-    <!-- Google Font Poppins  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
-    <!-- font-family: 'Poppins', sans-serif; -->
+    <!-- Google Font Montserrat  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
+  <style>
+    .body-baground{
+      background-image: url(bg-image.jpg);
+    }
+    
+  </style>
+
   </head>
-  <body class="container">
+  <body class="container body-baground">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
