--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
   <style>
     .body-baground{
       background-image: url(bg-image.jpg);
+      font-family: "Bebas Neue", cursive;
     }
     
   </style>
